// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component closees the first tab and opens any clicked tab 1`] = `
<div>
  <br />
  <br />
  <h2>
    Tabs project
  </h2>
  <button
    key="0"
    onClick={[Function]}
  >
    First tab
  </button>
  <button
    key="1"
    onClick={[Function]}
  >
    Second tab
  </button>
  <button
    key="2"
    onClick={[Function]}
  >
    Third tab
  </button>
  <div
    className="content"
  >
    This is the content of the second tab. There is more writing here than in the first tab.
  </div>
</div>
`;

exports[`Tabs Component renders empty given no tabs 1`] = `
<div>
  <br />
  <br />
  <h2>
    Tabs project
  </h2>
</div>
`;

exports[`Tabs Component renders the first tab by default 1`] = `
<div>
  <br />
  <br />
  <h2>
    Tabs project
  </h2>
  <button
    key="0"
    onClick={[Function]}
  >
    First tab
  </button>
  <button
    key="1"
    onClick={[Function]}
  >
    Second tab
  </button>
  <button
    key="2"
    onClick={[Function]}
  >
    Third tab
  </button>
  <div
    className="content"
  >
    This is the content of the first tab.
  </div>
</div>
`;
